# mini-dragon

./: CMakeLists.txt  README.md  mingw-toolchain.cmake
build-win/: CMakeCache.txt
cmake/: mingw-w64.cmake
src/: agent.cpp  agent.hpp  config.cpp  config.hpp  cron_cmd.cpp  cron_cmd.hpp  cron_runner.hpp  cron_store.cpp  cron_store.hpp  gateway.cpp  gateway.hpp  heartbeat.hpp  hooks.cpp  hooks.hpp  https_client.cpp  https_client.hpp  main.cpp  mcp_client.cpp  mcp_client.hpp  mcp_manager.hpp  memory.hpp  memory_search.cpp  memory_search.hpp  message.hpp  onboard.cpp  onboard.hpp  provider.cpp  provider.hpp  provider_chain.cpp  provider_chain.hpp  rate_limiter.hpp  schema_adapter.hpp  session.hpp  skills_loader.cpp  skills_loader.hpp  status.cpp  status.hpp  team.cpp  team.hpp  tool_registry.hpp  (+1 more)
src/channels/: channel.hpp  cli_channel.hpp  discord_stub.hpp  http_channel.hpp  slack_stub.hpp  telegram_channel.hpp  webhook_channel.hpp
src/gui/: CMakeLists.txt  app.cpp  app.hpp  main_gui.cpp  theme.hpp
src/gui/panels/: chat_panel.cpp  chat_panel.hpp  status_panel.cpp  status_panel.hpp
src/tools/: cron_tool.cpp  cron_tool.hpp  exec_tool.cpp  exec_tool.hpp  fs_tools.cpp  fs_tools.hpp  memory_search_tool.cpp  memory_search_tool.hpp  memory_tool.cpp  memory_tool.hpp  subagent_tool.cpp  subagent_tool.hpp  team_tools.cpp  team_tools.hpp
